Fix webkit scrollbar styles.

--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -268,11 +268,11 @@ pre, code, div.codehilite { // nice scrollbars in webkit
     }
 
     ::-webkit-scrollbar-track-piece {
-        background: inherit; //#d0d0d0;
+        background: #d0d0d0;
     }
 
     ::-webkit-scrollbar-thumb:vertical, ::-webkit-scrollbar-thumb:horizontal {
-        background: inherit; //#999;
+        background: #999;
         .border-radius(5px);
         display: block;
         height: 50px;
